--- a/sobel/hls_config.cfg
+++ b/sobel/hls_config.cfg
@@ -6,3 +6,5 @@ package.output.format=ip_catalog
 package.output.syn=false
 syn.file=../sobel.cpp
 tb.file=../testbench.cpp
+syn.top=sobel
+clock=11.1ns
